Initial Project Commit pt2

--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,7 @@
     <title>Orlando Aguilar Final Project</title>
 </head>
 <body>
-    
+    <h1>Orlando Aguilar's Final Project</h1>
+    <p>More information will be added.</p> 
 </body>
 </html>
