first initial button and chart to create data

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orlando Aguilar Final Project</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+  <div class="wrapper">
+  <header class="header">
     <h1>Orlando Aguilar's Final Project</h1>
-    <p>More information will be added.</p> 
-</body>
+  </header>
+    <h2>Display SpaceX's Successful and Failed Launches</h2>
+  <button onclick="createChart()">Create Chart</button>
+   <canvas id="myChart"></canvas>
+  <script src="script.js"></script>
+  </body>
 </html>
