--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
     
       <button onclick="createChart()">Create Chart</button>
       <button onclick="deleteChart()">Delete Chart</button>
+      <button id=getDataButton>Get Data</button>
     
     <label>
       <input type="checkbox" name="success" value="true">
@@ -44,6 +45,11 @@
       <input type="checkbox" name="failure" value="true">
       Show failed missions
     </label>
+
+    <p>
+      <center> work in progress Click here to display a random missions information!</center>
+    </p>
+
   </h3>
   
   <script src="script.js"></script>
